[metadata]
name = vega
description = A Jupyter widget for Vega 5 and Vega-Lite 4
long_description = file: README.rst
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
author = "Dominik Moritz <domoritz@gmail.com>"
url = "https://github.com/vega/ipyvega"
keywords = ipython, jupyter, widgets, vega
platforms = Linux, Mac OS X, Windows
[options]
packages =
    vega
    vega.tests    
install_requires =
    ipytablewidgets
    ipywidgets>=7.5.0,<8
    traitlets>=4.3.0
    traittypes>=0.0.6
    numpy>=1.10.4,<2.0.0
    pandas>=1.0.0,<2.0.0
    lz4
    
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Multimedia :: Graphics
    License :: OSI Approved :: BSD
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
python_requires = >=3.6
include_package_data = True
zip_safe = False

